# context-hygiene

./: .gitignore  .gitleaks.toml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  homebrew.yml  hygiene.yml  release.yml
benchmarks/: generate_fixture.py  run.py
homebrew/: context-hygiene.rb
scripts/: demo.sh  stripe_setup_context_hygiene.py
src/context_hygiene/: __init__.py  __main__.py  api.py  cleaner.py  cli.py  config.py  exceptions.py  gates.py  licensing.py  models.py  reporter.py  store.py  telemetry.py  watcher.py
src/context_hygiene/analyzers/: __init__.py  compression.py  contradictions.py  deadweight.py  deep.py  staleness.py
src/context_hygiene/llm/: __init__.py  anthropic.py  base.py  ollama.py
src/context_hygiene/llm/prompts/: compression.md  contradictions.md  deadweight.md  staleness.md
src/context_hygiene/parsers/: __init__.py  base.py  claude.py  codex.py  detect.py  generic.py  openai.py
tests/: conftest.py  test_api.py  test_cleaner.py  test_cli.py  test_cli_e2e.py  test_cli_extended.py  test_config.py  test_deep.py  test_exceptions.py  test_gates.py  test_licensing.py  test_licensing_server.py  test_main.py  test_models.py  test_reporter.py  test_store.py  test_telemetry.py  test_watcher.py
tests/fixtures/: claude_export.json  generic_conversation.md  openai_export.json
tests/test_analyzers/: test_compression.py  test_contradictions.py  test_deadweight.py  test_staleness.py
tests/test_llm/: test_anthropic.py  test_base.py  test_ollama.py
tests/test_parsers/: test_base.py  test_claude.py  test_codex.py  test_detect.py  test_generic.py  test_openai.py
