[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-hygiene"
version = "0.2.0"
description = "Context window hygiene analyzer for LLM conversations"
readme = {text = "Context window hygiene analyzer", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AreteDriver" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["llm", "context-window", "hygiene", "analyzer", "ai"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
watch = ["watchdog>=4.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]

[project.scripts]
ctx-hygiene = "context_hygiene.cli:app"

[project.urls]
Homepage = "https://github.com/AreteDriver/context-hygiene"
Repository = "https://github.com/AreteDriver/context-hygiene"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["context_hygiene"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
